--- a/src/components/checkout/checkout-slide.scss
+++ b/src/components/checkout/checkout-slide.scss
@@ -13,7 +13,7 @@
   justify-content: flex-start;
   background-color: var(--primary);
   @media (max-width: 1024px) {
-    width: calc(100vw - var(--vw-md));
+    width: calc(100vw - (var(--vw-md) * 2));
     padding: 0 var(--vw-md);
   }
   &__close-btn {
@@ -21,12 +21,17 @@
     position: absolute;
     top: var(--vh-md);
     right: var(--vh-md);
+    @media (max-width: 1024px) {
+      top: var(--vh-sm);
+      right: var(--vh-sm);
+    }
   }
   &__header {
     text-transform: uppercase;
     font-size: var(--text-blurb);
     font-weight: var(--bold);
     padding-bottom: var(--vh-lg);
+    padding-top: var(--space-lg);
   }
   &__items {
     width: 100%;
@@ -40,6 +45,9 @@
   &__summary {
     margin-top: auto;
     width: 100%;
+    @media (max-width: 1024px) {
+      padding-bottom: var(--vh-sm);
+    }
     .subtotal {
       width: 100%;
       font-size: var(--text-prose);
@@ -69,7 +77,6 @@
         }
       }
       .promo {
-        width: calc(100% - (var(--space-lg) * 2));
         width: 100%;
         height: var(--vh-md);
         margin: var(--space-lg);
@@ -80,6 +87,9 @@
         padding-left: var(--space-lg);
         font-weight: var(--xbold);
         color: var(--white);
+        @media (max-width: 1024px) {
+          width: calc(100% - (var(--space-md) * 3));
+        }
         &::placeholder {
           flex: var(--text-prose);
           font-weight: var(--xbold);
@@ -93,6 +103,9 @@
         transform: translateY(-50%);
         height: 2vh;
         transition: var(--transition-3-smooth);
+        @media (max-width: 1024px) {
+          right: var(--space-lg);
+        }
       }
       path {
         fill: transparent;
@@ -123,8 +136,13 @@
       align-items: center;
       justify-content: flex-start;
       overflow: hidden;
+      @media (max-width: 1024px) {
+        & > * {
+          transform: translateX(-5vw) !important;
+        }
+      }
       &:disabled {
-        opacity: .5;
+        opacity: 0.5;
         cursor: not-allowed;
         &:hover {
           & > * {
@@ -145,6 +163,11 @@
         margin-right: -2vh;
         svg {
           width: 4vw;
+        }
+        @media (max-width: 1024px) {
+          svg {
+            width: 20vw;
+          }
         }
       }
       .btn-text {
